--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ main: io.github.cardsandhuskers.tgttos.TGTTOS
 api-version: 1.19
 authors: [ cardsandhuskers ]
 description: To get to the Other Side and Press the Button
-depend: [PlayerPoints, PlaceholderAPI, Teams]
+depend: [PlaceholderAPI, Teams]
 commands:
   setTGTTOSPos1:
     description: sets position 1 of the arena
