Added cancel and reload commands

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -24,3 +24,9 @@ commands:
   setTGTTOSLobby:
     description: sets the lobby point to return players to
     usage: /<command>
+  reloadTGTTOS:
+    description: reloads the config for the game
+    usage: /<command>
+  cancelTGTTOS:
+    description: cancels the game
+    usage: /<command>
